2006-07-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-pajek-parser.y : a bit rewritten to handle attributes
	* src/foreign.c (igraph_read_graph_pajek) : updated to handle 
	attributes
	* examples/simple/foreign.c : updated, attributes parameter added

	* src/attributes.h (igraph_i_attribute_record_t) : value changed to
	const pointer
	* src/foreign.c (igraph_read_graph_ncol, igraph_read_graph_lgl) :
	updated

2006-07-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/types.h (igraph_hashtable_t) : added
	* src/igraph_hashtable.c (igraph_hashtable_init)
	(igraph_hashtable_destroy, igraph_hashtable_addset)
	(igraph_hashtable_get, igraph_hashtable_reset) : added
	* examples/simple/igraph_hashtable.c : added

	* src/igraph_hashtable.c (igraph_hashtable_getkeys) : added

	* src/igraph_hashtable.c (igraph_hashtable_addset2) : added
	* examples/simple/igraph_hashtable.c : updated

2006-07-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_barabasi_aging_game) : zero_age_appeal, 
	deg_coef, age_coef added

2006-06-28  Gabor Csardi  <csardi@kzoo.edu>

	* src/structural_properties.c (igraph_constraint) : added

2006-06-21  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structural_properties.c (igraph_reciprocity) :
	bug corrected

2006-06-21  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/*.c : modified docstrings to be conform to
	the epydoc formatting conventions. Now the whole Python API
	documentation can be generated with epydoc.

2006-06-17  Gabor Csardi  <csardi@kzoo.edu>

	* src/games.c (igraph_nonlinear_barabasi_game)
	(igraph_barabasi_aging_game, igraph_recent_degree_aging_game)
	(igraph_recent_degree_aging_game) : added zero_appeal argument

2006-06-16  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structural_properties.c (igraph_reciprocity) : added
	* examples/simple/igraph_reciprocity.c : added
	* interfaces/python/graphobject.c
	(igraphmodule_Graphobject_reciprocity) : added

2006-06-14  Tamas Nepusz  <ntamas@rmki.kfki.hu>
