@@ -19,6 +19,12 @@ o add attribute support to spanning tree functions
 
 Other bits:
 
+o PAJEK import improvements: 
+  - affiliation networks, AFFIL.NET: *Vertices n n1 
+  - multiple edge sets in the same graph (?), Sampson.net, Multi.net, 
+    SampsonL.net
+  - no newline at the end of the last line, url.net
+  - color conversion, see colors in the Pajek manual
 o rewite add_edges, add_vertices, delete_edges, delete_vertices,
   they're a mess
 o better looking graphs in 3D in the R interface
